                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 02-02-2005 changed: cdda player is now based on libcdio 
  - 02-02-2005 updated: libcdio to version 0.72
  - 02-02-2005 added: Profile overwrite + context menu in profilewindow for overwrite/rename/delete.
  - 01-02-2005 added: mplayer support for new system\players directory structure, enable Alternate mplayer core in settings to use it.
                      Requires new compiled mplayer.dll, old dll's still needs to be in old mplayer dir.
  - 01-02-2005 fixed: [ 1113362 ] Selecting "All songs" in Artist view takes awfully long time
  - 01-02-2005 fixed: Slow music search
  - 01-02-2005 fixed: [ 1095048 ] If no DVD is in the drive, do not use cached thumbnail.
  - 01-02-2005 added: My Programs option to cache thumbnails.  HDDLoader users will want to turn this off.
  - 31-01-2005 fixed: Screenshot mem is freed correctly in overlays mode
  - 31-01-2005 fixed: Some defaults for movie viewing + "subs delay" message no longer shows on movie start.
  - 31-01-2005 fixed: Incorrect webrequest HEAD sent when a value was entered for HTTP Proxy Host but HTTP proxy was disabled.
  - 31-01-2005 fixed: videos (in certain resolutions) crash on subtitle/osd display, more commonly reported as "MPEG2 files don't play".
  - 31-01-2005 added: Representative screenshot for overlay modes.
  - 31-01-2005 added: SF patch from kraqh3d enhancing the music title format:
               %N = tracknumber, %T = title, %A = artist, %B = album, %G = genre, %Y = year, %% for a % sign.
  - 31-01-2005 updated: German (Austrian) language file (Thnx to CEOMR)
  - 30-01-2005 updated: libcdio to version 0.71
  - 30-01-2005 updated: German language file